--- a/frontend/src/components/Gallery/MainGallery/MainGallery.module.css
+++ b/frontend/src/components/Gallery/MainGallery/MainGallery.module.css
@@ -7,9 +7,12 @@
     flex-wrap: wrap;
     gap: 8px;
     padding-top: 12px;
+    padding-bottom: 12px;
+    padding-inline: 6px;
     justify-content: space-between;
     align-content: flex-start;
     width: 100%;
+    box-sizing: border-box;
     overflow-y: scroll;
     max-height: 10%;
 }
@@ -28,6 +31,7 @@
     .grid {
         gap: 6px;
         padding-top: 8px;
+        padding-bottom: 8px;
         justify-content: flex-start;
     }
 }
